--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
     "name": "sitecore-cdp",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "Insert the Sitecore CDP scripts onto your page and fire events",
     "main": "index.js",
     "scripts": {
-        "test": "test"
+        "test": "test",
+        "build": "tsc",
+        "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+        "lint": "tslint -p tsconfig.json"
     },
     "repository": {
         "type": "git",
@@ -20,5 +23,18 @@
     "bugs": {
         "url": "https://github.com/DaveGoosem/Sitecore-CDP/issues"
     },
-    "homepage": "https://github.com/DaveGoosem/Sitecore-CDP#readme"
+    "homepage": "https://github.com/DaveGoosem/Sitecore-CDP#readme",
+    "directories": {
+        "lib": "lib"
+    },
+    "devDependencies": {
+        "@types/node": "^18.7.8",
+        "prettier": "^2.7.1",
+        "tslint": "^6.1.3",
+        "tslint-config-prettier": "^1.18.0",
+        "typescript": "^4.7.4"
+    },
+    "dependencies": {
+        "axios": "^0.27.2"
+    }
 }
